<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chases.inclass03.DisplayActivity"
    android:background="@drawable/ic_action_edit"
    android:backgroundTint="#828282"
    android:backgroundTintMode="add">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_display_info"
        android:id="@+id/textViewInfo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:textColor="@color/abc_input_method_navigation_guard" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:id="@+id/hFirst">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_name"
                android:id="@+id/textViewName"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="20dp"
                android:paddingTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="default"
                android:id="@+id/textViewNameDisplay"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="20dp"
                android:layout_marginLeft="25dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight= "1"
                />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/imageViewName"
                android:src="@drawable/ic_action_edit"
                android:layout_gravity="right"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/hSecond">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_email"
                android:id="@+id/textViewEmail"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="20dp"
                android:paddingTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="default"
                android:id="@+id/textViewEmailDisplay"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="20dp"
                android:layout_marginLeft="25dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight= "1"
                />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/imageViewEmail"
                android:src="@drawable/ic_action_edit" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/hThird">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_department"
                android:id="@+id/textViewDepart"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="20dp"
                android:paddingTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="default"
                android:id="@+id/textViewDepartDisplay"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="20dp"
                android:layout_marginLeft="25dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight= "1"
                />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/imageViewDepart"
                android:src="@drawable/ic_action_edit" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/hFourth" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_mood_short"
                android:id="@+id/textViewMood"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="20dp"
                android:paddingTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="default"
                android:id="@+id/textViewMoodDisplay"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="20dp"
                android:layout_marginLeft="25dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight= "1"
                />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/imageViewMood"
                android:src="@drawable/ic_action_edit"
                android:layout_gravity="right" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
